--- a/EventU/project.properties
+++ b/EventU/project.properties
@@ -12,5 +12,6 @@
 
 # Project target.
 target=android-18
-android.library.reference.1=..\\..\\..\\..\\..\\adt-bundle-windows-x86_64-20130917\\sdk\\extras\\google\\google_play_services\\libproject\\google-play-services_lib
-android.library.reference.2=..\\..\\..\\ProyectosEclipse\\android-support-v7-appcompat
+android.library.reference.1=../../../../ProyectosEclipse/android-support-v7-appcompat
+android.library.reference.2=../../../../../../AndroidPulltorefreh
+android.library.reference.3=../../../../../../adt-bundle-windows-x86_64-20130917/sdk/extras/google/google_play_services/libproject/google-play-services_lib
