--- a/EventU/project.properties
+++ b/EventU/project.properties
@@ -12,7 +12,7 @@
 
 # Project target.
 target=android-18
-android.library.reference.1=..\\..\\..\\..\\..\\sdk\\extras\\google\\google_play_services\\libproject\\google-play-services_lib
-android.library.reference.2=..\\..\\..\\..\\..\\sdk\\extras\\android\\support\\v7\\appcompat
-android.library.reference.3=..\\..\\Android-PullToRefresh-master\\library
-android.library.reference.4=../../PhotoView-master
+android.library.reference.1=..\\..\\PhotoView-master
+android.library.reference.2=..\\..\\AndroidPulltorefreh
+android.library.reference.3=..\\..\\android-support-v7-appcompat
+android.library.reference.4=../../google-play-services_lib
